.. -*- rst -*-

Change Log
==========

Release 0.062 - ()
------------------------------------
* Improve precision of IAF encoders.
* Fix signs in delayed IAF example.

Release 0.061 - (November 24, 2010)
-----------------------------------
* Add docs for PyCUDA-based functions.
* Update installation information.
* Update copyright information.

Release 0.06 - (September 17, 2010)
-----------------------------------
* Add SISO PyCUDA-based IAF TEM/TDM implementations.
* Fix encoder resampling.
* Update docs.

Release 0.051 - (June 9, 2010)
------------------------------
* Eliminate various unnecessary loops and summations.

Release 0.05 - (June 1, 2010)
-----------------------------
* Add documentation.
* Add more efficient concurrent IAF encoder.
* Fix bug in MIMO spline interpolation decoders.

Release 0.04 - (April 19, 2010)
-------------------------------

* Improve docstrings, use numpy docstring conventions.
* Add IAF interpolation spline decoding algorithms.
* Add coupled IAF encoding and decoding algorithms.
* Add MIMO delayed IAF encoding and decoding algorithms.

Release 0.03 - (November 12, 2009)
----------------------------------

* Accelerate IAF decoder implementations.
* Add IAF population decoding algorithm.
* Add IAF real-time decoding algorithm.
* Clean up demos.
* Facilitate installation on x86_64 Linux.

Release 0.021 - (October 23, 2009)
----------------------------------

* Clean up real-time algorithm implementations.
* Make time array construction consistently use a fixed time step.

Release 0.02 - (June 26,2009)
-----------------------------

* Add real-time encoding and decoding algorithms.
* Add ASDM population decoding algorithms.
* Make code more readable.

Release 0.011 - (May 08, 2009)
------------------------------

* Change package name to Time Encoding and Decoding Toolbox.

Release 0.01 - (May 08, 2009)
-----------------------------

* First public release.