@@ -27,7 +27,7 @@ To run the CUDA-dependent implementations, you will also need
 
 * `NVIDIA CUDA Toolkit <www.nvidia.com/object/cuda_get.html>`_ 3.2 or later.
 * `PyCUDA <http://mathema.tician.de/software/pycuda>`_ 0.94.2 or later.
-* `scikit.cuda <http://bionet.ee.columbia.edu/code>`_ 0.03 or later.
+* `scikit.cuda <http://bionet.ee.columbia.edu/code>`_ 0.04 or later.
 
 To run the demo code and generate plots, the following package 
 is also required:
