@@ -21,210 +21,6 @@ from scikits.cuda import install_headers
 # Pseudoinverse singular value cutoff:
 __pinv_rcond__ = 1e-8
 
-# Kernel template for performing ideal/leaky time encoding a
-# 1D signal using N encoders:
-iaf_encode_pop_template = Template("""
-#if ${use_double}
-#define FLOAT double
-#define EXP(x) exp(x)
-#else
-#define FLOAT float
-#define EXP(x) expf(x)
-#endif
-
-// Macro for accessing multidimensional arrays with cols columns by
-// linear index:
-#define INDEX(row, col, cols) (row*cols+col)
-
-// u: input signal
-// s: returned matrix of spike trains
-// ns: returned lengths of spike trains
-// dt: time resolution
-// b: neuron biases
-// d: neuron thresholds
-// R: neuron resistances
-// C: neuron capacitances
-// y: initial values of integrators
-// interval: initial values of the neuron time intervals
-// use_trapz: use trapezoidal integration if set to 1
-// Nu: length of u
-// N: length of ns, b, d, R, C, y, and interval:
-__global__ void iaf_encode_pop(FLOAT *u, FLOAT *s,
-                           unsigned int *ns, FLOAT dt,
-                           FLOAT *b, FLOAT *d,
-                           FLOAT *R, FLOAT *C,
-                           FLOAT *y, FLOAT *interval,
-                           unsigned int use_trapz,
-                           unsigned int Nu,
-                           unsigned int N)
-{
-    unsigned int idx = blockIdx.y*blockDim.x*gridDim.x+
-                       blockIdx.x*blockDim.x+threadIdx.x;
-
-    FLOAT y_curr, interval_curr;                       
-    FLOAT u_curr, u_next, b_curr, d_curr, R_curr, C_curr, RC_curr;
-    unsigned int ns_curr, last;
-    
-    if (idx < N) {
-        // Initialize integrator accumulator, interspike interval,
-        // and the spike counter for the current train:
-        y_curr = y[idx];
-        interval_curr = interval[idx];
-        ns_curr = ns[idx]; 
-
-        b_curr = b[idx];
-        d_curr = d[idx];
-        R_curr = R[idx];
-        C_curr = C[idx];
-        RC_curr = R_curr*C_curr;
-
-        // Use the exponential Euler method when the neuron resistance
-        // is not infinite:
-        if ((use_trapz == 1) && isinf(R_curr))
-            last = Nu-1;
-        else
-            last = Nu;
-
-        for (unsigned int i = 0; i < last; i++) {
-            u_curr = u[i];
-            u_next = u[i+1];
-            if isinf(R_curr) {
-                if (use_trapz == 1)
-                    y_curr += dt*(b_curr+(u_curr+u_next)/2)/C_curr;
-                else
-                    y_curr += dt*(b_curr+u_curr)/C_curr;
-            } else 
-                y_curr = y_curr*EXP(-dt/RC_curr)+
-                         R_curr*(1-EXP(-dt/RC_curr))*(b_curr+u_curr);                        
-            
-            interval_curr += dt;
-            if (y_curr >= d_curr) {
-                s[INDEX(idx, ns_curr, Nu)] = interval_curr;
-                interval_curr = 0.0;
-                y_curr -= d_curr;
-                ns_curr++;
-            }
-        }
-
-        // Save the integrator and interval values for the next
-        // iteration:
-        y[idx] = y_curr;
-        interval[idx] = interval_curr;
-        ns[idx] = ns_curr;
-    }                     
-}
-""")
-
-def iaf_encode_pop(u_gpu, dt, b_gpu, d_gpu, R_gpu, C_gpu,
-                   y_gpu=None, interval_gpu=None,
-                   quad_method='trapz', full_output=False):
-    """
-    Population IAF time encoding machine.
-
-    Encode a finite length signals with a population of Integrate-and-Fire
-    Neurons.
-    
-    Parameters
-    ----------
-    u_gpu : pycuda.gpuarray.GPUArray
-        Signal to encode.
-    dt : float
-        Sampling resolution of input signal; the sampling frequency is
-        1/dt Hz.
-    b_gpu : pycuda.gpuarray.GPUArray
-        Array of encoder biases.
-    d_gpu : pycuda.gpuarray.GPUArray
-        Array of encoder thresholds.
-    R_gpu : pycuda.gpuarray.GPUArray
-        Array of neuron resistances.
-    C_gpu : pycuda.gpuarray.GPUArray
-        Array of neuron capacitances.
-    y_gpu : pycuda.gpuarray.GPUArray
-        Initial values of integrators.
-    interval_gpu : pycuda.gpuarray.GPUArray
-        Times since last spike (in s) for each neuron.
-    quad_method : {'rect', 'trapz'}
-        Quadrature method to use (rectangular or trapezoidal) when the
-        neuron is ideal; exponential Euler integration is used
-        when the neuron is leaky.
-    full_output : bool
-        If true, the function returns the updated arrays `y_gpu` and
-        `interval_gpu` in addition to the the encoded data block.
-
-    Returns
-    -------
-    [s_gpu, ns_gpu] : list of pycuda.gpuarray.GPUArray
-        If `full_output` is false, returns the encoded signal as a
-        matrix `s_gpu` whose rows contain the spike times generated by each
-        neuron. The number of spike times in each row is returned in
-        `ns_gpu`; all other values in `s_gpu` are set to 0.
-    [s_gpu, ns_gpu, y_gpu, interval_gpu] : list of pycuda.gpuarray.GPUArray
-        If `full_output` is true, returns the encoded signal
-        followed by updated encoder parameters.
-
-    """
-
-    float_type = u_gpu.dtype.type
-    if float_type == np.float32:
-        use_double = 0
-    elif float_type == np.float64:
-        use_double = 1
-    else:
-        raise ValueError('unsupported data type')
-
-    # Get the length of the signal:
-    Nu = u_gpu.size
-
-    N = b_gpu.size
-    if (d_gpu.size != N) or \
-           (R_gpu.size != N) or (C_gpu.size != N):
-        raise ValueError('parameter arrays must be of same length')
-    if ((y_gpu != None) and (y_gpu.size != N)) or \
-       ((interval_gpu != None) and (interval_gpu.size != N)):
-        raise ValueError('parameter arrays must be of same length')
-
-    dev = cumisc.get_current_device()
-    
-    # Use a smaller block size than the maximum to prevent the kernels
-    # from using too many registers:
-    max_threads_per_block = 256
-
-    # Get required block/grid sizes for running N encoders to process
-    # the N signals:
-    block_dim, grid_dim = cumisc.select_block_grid_sizes(dev, N,
-                          max_threads_per_block)
-
-    # Configure kernel:
-    cache_dir = None
-    iaf_encode_pop_mod = \
-                   SourceModule(iaf_encode_pop_template.substitute(use_double=use_double),
-                                # options=['--ptxas-options=-v'],
-                                cache_dir=cache_dir)
-    iaf_encode_pop = iaf_encode_pop_mod.get_function("iaf_encode_pop")
-
-    # Initialize integrator variables if necessary:
-    if y_gpu == None:
-        y_gpu = gpuarray.zeros(N, float_type)
-    if interval_gpu == None:
-        interval_gpu = gpuarray.zeros(N, float_type)
-
-    # XXX: A very long s array might cause memory problems:
-    s_gpu = gpuarray.zeros((N, Nu), float_type)
-    ns_gpu = gpuarray.zeros(N, np.uint32)
-    iaf_encode_pop(u_gpu, s_gpu, ns_gpu,
-                   float_type(dt), b_gpu, d_gpu,
-                   R_gpu, C_gpu,                   
-                   y_gpu, interval_gpu,
-                   np.uint32(True if quad_method == 'trapz' else False),
-                   np.uint32(Nu),
-                   np.uint32(N),
-                   block=block_dim, grid=grid_dim)
-
-    if full_output:
-        return [s_gpu, ns_gpu, y_gpu, interval_gpu]
-    else:
-        return [s_gpu, ns_gpu]
-
 def _compute_idx_map(ns):
     """
     Map a linear index to corresponding neuron and interspike interval indices.
